<resources>
    <string name="app_name">ShopNow</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>