<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:checkable="true"
        android:icon="@drawable/home"
        android:iconTint="@color/bnv_tab_item_foreground"
        android:title="@string/home" />
    <item
        android:id="@+id/shop"
        android:checkable="true"
        android:icon="@drawable/shop"
        android:iconTint="@color/bnv_tab_item_foreground"
        android:title="@string/shop" />
    <item
        android:id="@+id/bag"
        android:checkable="true"
        android:icon="@drawable/bag"
        android:iconTint="@color/bnv_tab_item_foreground"
        android:title="@string/bag" />
    <item
        android:id="@+id/favorite"
        android:checkable="true"
        android:icon="@drawable/favorite"
        android:iconTint="@color/bnv_tab_item_foreground"
        android:title="@string/favorites" />
    <item
        android:id="@+id/profile"
        android:checkable="true"
        android:visible="true"
        android:icon="@drawable/baseline_person_outline_24"
        android:iconTint="@color/bnv_tab_item_foreground"
        android:title="@string/profile" />
</menu>